--- a/.env
+++ b/.env
@@ -12,8 +12,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=pawsitivedb
 DB_USERNAME=root
-DB_PASSWORD=newpassword
-
+DB_PASSWORD=
 
 
 # Tenant database connection
